[tool.poetry]
name = "bluesky-feed-toronto"
version = "0.1.0"
description = ""
authors = ["Connor Feeley <git@cfeeley.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bluesky_feed_toronto"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
atproto = "^0.0.16"
peewee = "^3.16.2"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
